--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,8 +48,8 @@
     // "mapRoot": "",                               
     // "inlineSourceMap": true,                     
     // "inlineSources": true,                       
-    // "experimentalDecorators": true,              
-    // "emitDecoratorMetadata": true,               
+    "experimentalDecorators": true,              
+    "emitDecoratorMetadata": true,               
     "skipLibCheck": true,                           
     "forceConsistentCasingInFileNames": true        
   }
